# Tzafon-WayPoint

./: .gitignore  README.md  create_release.sh  local-build.sh  pyproject.toml  simple_test.py
.github/workflows/: build-and-publish.yaml
apps/: Cargo.toml  Dockerfile.rust-builder  run.py
apps/proto-definition/: README.md  build.sh  get-hash.sh  instance_manager.proto  local-setup.sh  proto_version
apps/proto-definition/ssl_certs/: gen.sh  server.conf
apps/proto-definition/ssl_certs/ca/: tls.crt  tls.key  tls.srl
apps/proto-definition/ssl_certs/client/: csr.pem  tls.crt  tls.key
apps/proto-definition/ssl_certs/server/: csr.pem  tls.crt  tls.key
apps/rust-instance-container/: .gitignore  Cargo.toml
apps/rust-instance-container/src/: lib.rs
apps/rust-instance-container/src/browser/: chrome.rs  ephemeral_browser_proxy.rs  main.rs  tzafonwright.rs
apps/rust-instance-manager/: Cargo.toml
apps/rust-instance-manager/src/: cli.rs  lib.rs  server.rs  service.rs  status_page.rs  traits.rs
apps/rust-instance-manager/templates/: dashboard.html  single_instance_page.html
apps/rust-shared/: Cargo.toml  build.rs
apps/rust-shared/src/: lib.rs  utils.rs
apps/rust-shared/src/metrics/: mod.rs  simple-bin.rs
apps/rust-shared/src/socket_gateway/: http_proxy.rs  metrics.rs  mod.rs  simple_gateway.rs
apps/tzafonwright/: README.md  pyproject.toml
apps/tzafonwright/src/tzafonwright/: __init__.py  client.py  models.py  server.py  utils.py
deployment/: README.md  chrome-deployment.hcl  chrome-deployment.yaml  ephemeral-browser-proxy.yaml  instances-manager.yaml
