[workspace]
resolver = "2"
members = [
    "rust-instance-manager",
    "rust-instance-container",
]

[workspace.dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.29", features = ["derive", "env"] }
hyper = { version = "1.6.0", features = ["full", "client"] }
prost = "0.13"
sysinfo = "0.34.0"
tokio = { version = "1.39.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["full"] }
tonic = { version = "0.13.0", features = ["tls-ring"] }
tonic-build = { version = "0.13.0" }
tracing = "0.1.40"
tracing-subscriber = "0.3.1"
uuid = { version = "1.16.0", features = ["v4"] }
glob = { version = "0.3.2" }

[workspace.lints.clippy]
single_match = "warn"
single_match_else = "warn"
needless_match = "warn"
needless_late_init = "warn"
redundant_pattern_matching = "warn"
redundant_pattern = "warn"
redundant_guards = "warn"
collapsible_match = "warn"
match_single_binding = "warn"
match_same_arms = "warn"
match_ref_pats = "warn"
match_bool = "warn"
needless_bool = "deny"
unwrap_used = "warn"
expect_used = "warn"
