[package]
name = "instance-manager"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "instance-manager"
path = "src/server.rs"

[[bin]]
name = "instance-manager-cli"
path = "src/cli.rs"


[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

shared = { path = "../rust-shared" }
askama = "0.13.1"
axum = "0.8.3"
serde = { version = "1.0.219", features = ["derive"] }
chrono = "0.4.40"

[lints]
workspace = true
