[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
prost = { workspace = true }
sysinfo = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["full"] }
tonic = { workspace = true }
tracing = { workspace = true }

uuid = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
glob = { workspace = true }
tonic-build = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["prost"]

[lints]
workspace = true