[project]
name = "tzafonwright"
version = "0.1.0"
description = "A library to control browsers (Playwright) via WebSocket commands."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "websockets>=10.0",
    "playwright>=1.30",
    "pillow>=11.1.0",
    "pyautogui>=0.9.54",
    "pydantic>=2.11.3",
    "gt>=0.3.15",
]

[project.optional-dependencies]
pyautogui = [
    "pyautogui>=0.9",
    "Pillow>=9.0",
]

[project.scripts]
chrome-server = "tzafonwright.scripts.chrome_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/tzafonwright"]
